src/test/deca/syntax/valid/class/29_void_un_param.deca
/*
	Description: test syntax d'une méthode void avec un parametre

	Resultat: syntaxiquement correct

	Date:20/1/2020


*/
class c{
void setX(int x){
	this.x=x;
	print(x);

}
}

{

}
