src/test/deca/syntax/invalid/class/methode_avec_visibility.deca
/*
	Description: decl methode avec visibility

	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



class a extends b{
	

	protected void hello(){
		print("hello");
	}
}
